add aws-cost loading

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    #aws
+    "dlt[duckdb,s3]>=1.18.2",
+    "pyarrow>=22.0.0",
+]
