--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    #all
+    "dlt[duckdb]>=1.18.2",
     #aws
-    "dlt[duckdb,s3]>=1.18.2",
+    "dlt[s3]",
     "pyarrow>=22.0.0",
     #bigquery
-    "dlt[duckdb]>=1.18.2",
     "google-cloud-bigquery>=3.38.0",
+    # stripe
+    "pandas>=2.0.0",
+    "stripe>=5.0.0",
 ]
