--- a/.dlt/config.toml
+++ b/.dlt/config.toml
@@ -5,6 +5,13 @@ log_level="ERROR"  # ERROR hides warning as stripe has many tables that with pot
 # use the dlthub_telemetry setting to enable/disable anonymous usage data reporting, see https://dlthub.com/docs/reference/telemetry
 dlthub_telemetry = false
 
+# Filesystem destination configuration - writes parquet files for Rill
+[destination.filesystem]
+bucket_url = "viz_rill/data"  # Output directory for parquet files
+
+[destination.filesystem.loader_file_format]
+file_format = "parquet"
+
 [sources.filesystem]
 local_dir = "/home/sspaeti/Documents/datalake/dlt-stage" # fill this in!
 bucket_url = "https://s3.us-west-1.amazonaws.com" # fill this in!
