--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    #all
-    "dlt[duckdb]>=1.18.2",
+    # all
+    "dlt[parquet]>=1.18.2",
     #aws
     "dlt[s3]",
     "pyarrow>=22.0.0",
