--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,8 @@ dependencies = [
     # stripe
     "pandas>=2.0.0",
     "stripe>=5.0.0",
+    # aws-cur-wizard
+    "duckdb>=1.4.2",
+    "jinja2>=3.1.6",
+    "python-dotenv>=1.2.1",
 ]
