--- a/viz_rill/.env
+++ b/viz_rill/.env
@@ -4,6 +4,9 @@
 # Input: Raw AWS CUR parquet files from dlt
 INPUT_DATA_DIR=./data/aws_costs/cur_export_test_00001
 
+# Input: Raw GCP billing parquet files from dlt
+INPUT_DATA_DIR_GCP=./data/gcp_costs
+
 # Output: Normalized parquet file
 NORMALIZED_DATA_DIR=./data
 
