rename aws-cur-wizard to cur-wizard (as we added GCP)

--- a/viz_rill/dashboards/aws_explore.yaml
+++ b/viz_rill/dashboards/aws_explore.yaml
@@ -1,6 +1,6 @@
 # AWS Cost Explore Dashboard
 # Interactive exploration interface for AWS cost data
-# Inspired by: https://github.com/rilldata/aws-cur-wizard
+# Inspired by: https://github.com/rilldata/aws-cur-wizard (now integrated as cur-wizard)
 
 type: explore
 
