--- a/viz_rill/sources/gcp_cost_source.yaml
+++ b/viz_rill/sources/gcp_cost_source.yaml
@@ -1,5 +1,4 @@
-type: source
-connector: duckdb
+type: model
 sql: |
   SELECT *
   FROM read_parquet('/home/sspaeti/git/work/cost-report-analyse/cloud-cost-analyzer/viz_rill/data/normalized_gcp.parquet')
