--- a/viz_rill/sources/aws_cost_source.yml
+++ b/viz_rill/sources/aws_cost_source.yml
@@ -1,4 +1,4 @@
 type: model
 sql: |
   SELECT *
-  FROM read_parquet('/home/sspaeti/git/work/cost-report-analyse/cloud-cost-analyzer/viz_rill/data/normalized.parquet')
+  FROM read_parquet('data/normalized.parquet')
