--- a/.dlt/secrets.toml.example
+++ b/.dlt/secrets.toml.example
@@ -17,3 +17,10 @@ token_uri = "https://oauth2.googleapis.com/token"
 [sources.stripe_analytics]
 stripe_secret_key = "sk_live_..."
 
+# ClickHouse Cloud credentials (for production deployment)
+[destination.clickhouse.credentials]
+host = "xxxxx.europe-west4.gcp.clickhouse.cloud"
+port = 8443
+username = "default"
+password = "<your-clickhouse-password>"
+secure = 1
