--- a/.dlt/secrets.toml.example
+++ b/.dlt/secrets.toml.example
@@ -23,3 +23,8 @@ host = "xxxxx.europe-west4.gcp.clickhouse.cloud"
 username = "default"
 password = "<your-clickhouse-password>"
 secure = 1
+
+# The `make init-clickhouse` will create the user and password - add the password here. See print
+#[destination.clickhouse.credentials]
+#username = 'dlt'
+#password = '<generated-password>'
