--- a/viz_rill/.env.example
+++ b/viz_rill/.env.example
@@ -22,5 +22,13 @@ RILL_PROJECT_PATH=.
 # Optional: Timeseries column (default: date extracted from identity_time_interval)
 # TIMESERIES_COL=date
 
-#for ClickHouse add this
-#connector.clickhouse.dsn=<your-dns-path>
+## ClickHouse Cloud Configuration (for production)
+# Uncomment these to use ClickHouse instead of local parquet files
+
+# 1. Set connector to clickhouse
+# RILL_CONNECTOR=clickhouse
+
+# 2. Add ClickHouse connection string
+# connector.clickhouse.dsn=clickhouse://username:password@host:port/database?secure=true
+# Example:
+# connector.clickhouse.dsn=clickhouse://default:your-password@xxxxx.europe-west4.gcp.clickhouse.cloud:8443/default?secure=true
