--- a/viz_rill/rill.yaml
+++ b/viz_rill/rill.yaml
@@ -3,4 +3,5 @@ compiler: rillv1
 display_name: Cloud Cost Analytics
 description: Multi-cloud cost analytics combining AWS, GCP costs and Stripe revenue. Analyze costs by provider, service, region, and time to optimize cloud spending and understand margins.
 
-olap_connector: duckdb
+# olap_connector: duckdb
+olap_connector: clickhouse
